--- a/smart-web-framework/pom.xml
+++ b/smart-web-framework/pom.xml
@@ -85,6 +85,13 @@
             <version>2.7.0</version>
         </dependency>
 
+        <!-- cglib       -->
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2.2</version>
+        </dependency>
+
         <!-- Junit -->
         <dependency>
             <groupId>junit</groupId>
