--- a/smart-samples/pom.xml
+++ b/smart-samples/pom.xml
@@ -19,9 +19,25 @@
     <dependencies>
         <dependency>
             <groupId>org.geekbang</groupId>
-            <artifactId>simple-web-framework</artifactId>
+            <artifactId>smart-web-framework</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+            <scope>provided</scope>
+        </dependency>
+
+        <!-- Junit -->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+
     </dependencies>
 
     <build>
