--- a/smart-web-framework/pom.xml
+++ b/smart-web-framework/pom.xml
@@ -85,11 +85,18 @@
             <version>2.7.0</version>
         </dependency>
 
-        <!-- cglib       -->
+        <!-- cglib    -->
         <dependency>
             <groupId>cglib</groupId>
             <artifactId>cglib</artifactId>
             <version>2.2.2</version>
+        </dependency>
+
+        <!-- Apache 提供的文件上传jar -->
+        <dependency>
+            <groupId>commons-fileupload</groupId>
+            <artifactId>commons-fileupload</artifactId>
+            <version>1.4</version>
         </dependency>
 
         <!-- Junit -->
